<resources>
    <string name="app_name">PiD</string>
    <string name="welcome">Bem vindo ao PiD</string>
    <string name="login_confirm">ENTRAR</string>
    <string name="login_message">Ou entre com e-mail e senha</string>
    <string name="register_message">Não tem uma conta?</string>
    <string name="register_message_create">Crie uma!</string>
    <string name="back_button">Voltar</string>
    <string name="confirm">OK</string>
    <string name="email">E-mail</string>
    <string name="nomeUser">Usuário</string>
    <string name="nome_e_sobrenome">Nome e Sobrenome</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar Senha</string>
    <string name="next">Avançar</string>
    <string name="back">Voltar</string>
    <string name="image_update">Atualizar Foto</string>
    <string name="image_insert">Inserir Foto</string>
    <string name="password_remember">Esqueci minha senha</string>
    <string name="create_account">CRIAR CONTA</string>
    <string name="lb_create_account">Criar Conta</string>
    <string name="cancel">CANCELAR</string>
    <string name="success_create_login">Conta criada com sucesso.</string>
    <string name="error_create_login">Ocorreu um erro. Verifique os campos acima.</string>
    <string name="message_insert_email">Insira o e-mail de sua conta no campo abaixo para enviarmos sua senha.</string>
    <string name="send_email">ENVIAR E-MAIL</string>
    <string name="success_send_email">E-mail enviado com sucesso.</string>
    <string name="lb_remember">Esqueci minha senha</string>
    <string name="keep_conect">Mantenha-me conectado</string>
    <string name="message_create_account">Não tem uma conta? Crie uma!</string>
    <string name="facebook_app_id">1966416683622473</string>
    <string name="fb_login_protocol_scheme">fb1966416683622473</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_search">Buscar</string>
    <string name="nav_classes">Turmas</string>
    <string name="tab_turmas_criadas">Minhas Turmas</string>
    <string name="tab_turmas_matriculadas">Turmas Matriculadas</string>
    <string name="tab_perfil_posts">Posts</string>
    <string name="tab_perfil_curtidos">Curtidos</string>
    <string name="following">Seguindo</string>
    <string name="followers">Seguidores</string>
    <string name="nav_study">Estudar</string>
    <string name="sair">Sair</string>
    <string name="nova_turma">Nova Turma</string>
    <string name="criar_turma">Criar turma</string>
    <string name="nome_da_turma">Nome da Turma</string>
    <string name="dias_da_semana">Dias da semana</string>
    <string name="segunda_feira">Segunda-Feira</string>
    <string name="ter_a_feira">Terça-Feira</string>
    <string name="quarta_feira">Quarta-Feira</string>
    <string name="quinta_feira">Quinta-Feira</string>
    <string name="sexta_feira">Sexta-Feira</string>
    <string name="s_bado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="pin">PIN (Opcional)</string>
    <string name="completar_acao">Completar Ação Usando</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="follow">Seguir</string>
    <string name="editprofile">Editar Perfil</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="message_update_profile">Ei, você precisa atualizar seu perfil. Vamos fazer isto agora?</string>
    <string name="letsgo">Vamos lá!</string>
    <string name="notnow">Agora não</string>
    <string name="gender">Sexo:</string>
    <string name="date">Data:</string>
    <string name="fill_fields">Preencha todos os campos.</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="updated_data">Dados atualizados com sucesso!</string>
    <string name="change_profile_photo">Alterar foto de perfil</string>
    <string name="select_image">Selecionar imagem</string>
    <string name="teacher">Professor</string>
    <string name="student">Alunos</string>
    <string name="chats">Chats</string>
    <string name="trabalhos">Trabalhos</string>
    <string name="entrando">Entrando...</string>
    <string name="fazendo_login">Fazendo o login...</string>
    <string name="sad_message_turma_matriculada">As turmas que você entrar ficarão aqui assim que o professor aceitar a solicitação.\n\nBusque sua turma na área de busca!</string>
    <string name="solicitacoes">Solicitações</string>
    <string name="change">Alterar</string>
    <string name="atualizar">Atualizar</string>
    <string name="excluir_turma">Excluir Turma</string>
    <string name="editar_turma">Editar Turma</string>
    <string name="confirmar">Confirmar</string>
    <string name="Error">Erro</string>
    <string name="Ok">Ok</string>
    <string name="preencha_nome_turma">Preencha o nome da turma</string>
    <string name="Preencha_dia_semana">Selecione pelo menos um dia da semana</string>
    <string name="novo_post">Novo Post</string>
    <string name="caracteres">Caracteres:</string>
    <string name="limit_chars_post">200</string>
    <string name="_0_limit">0/200</string>
    <string name="postar">Postar</string>
    <string name="postTime">Hora da postagem</string>
    <string name="sad_message_chats">Não encontramos nenhum chat</string>
    <string name="new_chat">Criar Chat</string>
    <string name="sad_message_feed">Posts seus e de quem você segue aparecerão neste lugar.\n\nTente criar um!</string>
    <string name="ir_perfil">Perfil</string>
    <string name="confirmacao">Confirmação</string>
    <string name="unfollow_message">Tem certeza que deseja deixar de seguir?</string>
    <string name="recusar">Recusar</string>
    <string name="aceitar">Aceitar</string>
    <string name="excluir_post">Deseja excluir o post selecionado?</string>
    <string name="pin_type_msg">O professor colocou um código para acessar a turma. Digite-o para enviar uma solicitação.</string>
    <string name="pin_type">Digite o PIN</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="solicitacao_sucesso">Solicitação enviada com sucesso.</string>
    <string name="warning">Aviso</string>
    <string name="wrong_pin">PIN incorreto.</string>
    <string name="deseja_solicitacao">Deseja enviar uma solicitação para entrar na turma?</string>
    <string name="aluno">Aluno</string>
    <string name="followers_upper">SEGUIDORES</string>
    <string name="posts_upper">POSTS</string>
    <string name="seguindo_upper">SEGUINDO</string>
    <string name="sugestao_usuarios">Usuários sugeridos</string>
    <string name="sugestas_turmas">Turmas sugeridas</string>
    <string name="student_upper">ALUNOS</string>
    <string name="solicitar_entrada">Solicitar entrada</string>
    <string name="solicitado">SOLICITADO</string>
    <string name="avisos">Avisos</string>
    <string name="novo_aviso">Novo Aviso</string>
    <string name="failure_send_email_pass">Não foi possível enviar o e-mail de recuperação de senha</string>
    <string name="preencha_nome_usuario">Preencha o campo de nome de usuário e tente novamente.</string>
    <string name="preencha_email">Informe seu e-mail e tente novamente.</string>
    <string name="preencha_senhas">Preencha os campos das senhas e tente novamente.</string>
    <string name="erro_senhas">Senhas não correspondem. Tente novamente.</string>
    <string name="erro_senha_6">Senha precisa de, pelo menos, 6 caracteres. Tente novamente.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_exibido_como">Seu chat será exibido como: </string>
    <string name="membros">Membros</string>
    <string name="mensagem_encontre_turmas_pessoas">Encontre turmas e pessoas para seguir!</string>
    <string name="mensagem_recomendacoes_dica"> Quando disponíveis, recomendações de usuários para seguir surgirão neste lugar.</string>
    <string name="trans_turma_capa">trans_turma_capa</string>
    <string name="trans_turma_foto">trans_turma_foto</string>
    <string name="trans_turma_nome">trans_turma_nome</string>
    <string name="selecionar_imagem">Selecionar imagem</string>
    <string name="sad_message_turmas_criadas">As turmas que você criar aparecerão aqui.</string>
    <string name="sad_message_turmas_usuario">Parece que este usuário não criou nenhuma turma.</string>
    <string name="trans_logo">trans_logo</string>
    <string name="comentarios">Comentários</string>
    <string name="comentar">Comentar</string>
    <string name="novo_comentario">Novo comentário</string>
</resources>
