<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/nav_feed" />
    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/menu_book"
        android:enabled="true"
        android:icon="@drawable/icon_book"
        android:title="@string/nav_book" />
    <item
        android:id="@+id/menu_study"
        android:enabled="true"
        android:icon="@drawable/icon_location"
        android:title="@string/nav_study" />
    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/icon_profile"
        android:title="@string/nav_profile" />
</menu>