<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
    android:background="@color/fundoRecycle"
tools:context="com.mobile.pid.pid.home.turmas.detalhes_turma.EditarTurma">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar_turma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:titleTextColor="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_turma"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginRight="60dp"/>
</android.support.v7.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/turma_capa"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:adjustViewBounds="true"
            android:src="@drawable/foto_capa_padrao"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILTurmaNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editar_turma_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_da_turma"
                    android:textSize="15dp"
                    android:focusable="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILTurmaPIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editar_turma_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/pin"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dias_da_semana"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_segunda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/segunda_feira"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_terca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/ter_a_feira"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_quarta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/quarta_feira"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_quinta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/quinta_feira"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_sexta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/sexta_feira"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/s_bado"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/turma_domingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/domingo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_excluir_turma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/excluir_turma"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:onClick="excluirTurma"
                android:foreground="?attr/selectableItemBackgroundBorderless" />

            <Button
                android:id="@+id/btn_atualizar_turma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/atualizar"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:onClick="atualizarTurma"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
