<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLogin"
    android:orientation="vertical"
    tools:context="com.mobile.pid.pid.login.LoginActivity">

    <ImageView
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_voltar"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="34.7dp"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_user"
            android:layout_gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TILuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="15dp"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_password"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TILpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="15dp"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_keep_conect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_conect"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_confirm"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/backgroundLogin"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_remember"
        android:clickable="true"
        android:linksClickable="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    
</LinearLayout>
