<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobile.pid.pid.AtualizarPerfilActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_atualizar_perfil"
        android:layout_width="match_parent"
        app:title="@string/atualizar_perfil"
        app:titleTextColor="@color/white"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">
            <!--TODO: Nome, sexo, data de nascimento...-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_atualizar_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_atualizar_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_e_sobrenome"
                    android:inputType="textEmailAddress"
                    android:textSize="15dp"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:layout_marginTop="16dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/atualizar_perfil_radio_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"
                    android:onClick="onRadioItemChanged"/>
                <RadioButton
                    android:id="@+id/atualizar_perfil_radio_feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feminino"
                    android:onClick="onRadioItemChanged"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_de_nascimento"
                android:layout_marginTop="16dp"/>
s
            <Button
                android:id="@+id/btn_atualizar_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:text="@string/data_de_nascimento"
                android:onClick="escolherData"/>

            <Button
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Atualizar"
                android:onClick="botaoAtualizarPerfil"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
